<resources>
    <string name="app_name">RepeatableTodo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="task_name_lbl">Task</string>
    <string name="task_detail_lbl">Detail</string>
    <string name="task_repeat_lbl">Repeat</string>
    <string name="task_repeatflag_lbl">Repeat Flag</string>
    <string name="task_dialog_title">Input Task</string>
    <string name="task_dialog_btn_ok">OK</string>
    <string name="remove_task_dialog_title">Remove Confirm</string>
    <string name="remove_task_dialog_message">Remove Task?</string>
    <string name="remove_task_dialog_ok_btn">OK</string>
    <string name="remove_task_dialog_cancel_btn">Cancel</string>
    <string name="task_illegaldialog_title">Dialog</string>
    <string name="task_illegaldialog_msg">task attribute is not correct</string>
    <string name="task_illegaldialog_ok">OK</string>
    <string name="menu_edit_task">Edit Task List</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group_configuration">Configuration</string>

    <string-array name="repeatunit_type_array">
        <item>DAILY</item>
        <item>WEEKLY</item>
        <item>MONTHLY</item>
    </string-array>

</resources>
