<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_show_by_date"
                android:icon="@drawable/ic_menu_camera"
                android:title="Show by Date"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow"/>
    </group>

    <item android:title="@string/menu_group_configuration">
        <menu>
            <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_edit_task"/>

            <item
                    android:id="@+id/nav_configuration"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_configuration"/>
        </menu>
    </item>

    <item android:title="test">
        <menu>
            <item
                    android:id="@+id/nav_test_make_todo"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Test Create TODO List"/>
        </menu>
    </item>


</menu>
